Advancing version to 1.7, require JDK 21